--- a/package.json
+++ b/package.json
@@ -17,25 +17,30 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
     "@types/js-cookie": "^3.0.6",
+    "@types/luxon": "^3.7.1",
     "@types/react-router": "^5.1.20",
     "ai": "^5.0.44",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "harden-react-markdown": "^1.0.5",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "katex": "^0.16.22",
     "lucide-react": "^0.544.0",
+    "luxon": "^3.7.2",
     "motion": "^12.23.18",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
